2006-02-02  Jakub Jelinek  <jakub@redhat.com>

	* math/math.h (__nldbl_nexttowardf): Put __THROW before
	__attribute__ ((__const__)).
	(__MATHDECL_2): Use __REDIRECT_NTH instead of __REDIRECT
	followed by __THROW.

	* math/math.h [__LDBL_COMPAT && __USE_ISOC99] (nexttowardl): New
	prototype.

2006-02-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/futimesat.c [__NR_futimesat]
	(futimesat): If file is NULL use __futimes.
	* include/sys/time.h: Declare __futimes.

2006-02-02  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/openat.c (__atfct_seterrno): Use the same
	fstat check for ENOENT that should be EBADF as for ENOTDIR, and also
	check for missing /proc the same way.

	* include/errno.h [__cplusplus]: Avoid extra header magic for C++.

	* manual/install.texi (Tools for Compilation): Require gcc 3.4,
	recommend 4.1, advise 4.0 for powerpc64, and note 4.1 required for
	powerpc, s390{x,} with new long double.
	* INSTALL: Regenerated.

	* timezone/private.h: Update from tzcode2006a.
	* timezone/scheck.c: Likewise.
	* timezone/asia: Update from tzdata2006a.
	* timezone/northamerica: Likewise.
	* timezone/zone.tab: Likewise.

	* sysdeps/powerpc/powerpc64/Makefile (no-special-regs): New variable.
	(CFLAGS-mcount.c): Use it instead of -msoft-float.
	* sysdeps/powerpc/powerpc64/elf/Makefile
	(CFLAGS-dl-runtime.os, CFLAGS-dl-lookup.os, CFLAGS-dl-misc.os,
	CFLAGS-rtld-mempcpy.os, CFLAGS-rtld-memmove.os, CFLAGS-rtld-memchr.os,
	CFLAGS-rtld-strnlen.os): Likewise.

2006-02-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/ieee754/ldbl-opt/Makefile (sysdep-CFLAGS): Avoid adding
	-mlong-double-128 when it's already there.

2006-02-01  Roland McGrath  <roland@frob.com>

	* mach/Machrules ($(objpfx)%.uh, $(objpfx)%.__h): Use static pattern
	rules for these, not implicit rules.
	($(objpfx)%.h): Likewise.
	Reported by Thomas Schwinge <tschwinge@gnu.org>.

2006-02-01  Jakub Jelinek  <jakub@redhat.com>
